# local-transcriber

./: .gitignore  AGENTS.md  ContainerFile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  architecture.md  cli.md
example_recording/: manifest.json
example_recording/Riccardo_f8ac3e/: Riccardo_f8ac3e.opus  metadata.json
local_transcriber/: __init__.py  audio.py  backend.py  cli.py  output.py  pipeline.py  session.py  vad.py
scripts/: e2e_cleanup.sh  run.sh
sidecar/: ContainerFile  entrypoint.sh
src/: __init__.py  jobs.py  main.py  pipeline.py  rnnoise.py
src/backends/: __init__.py  local_whisper.py  vllm_client.py
tests/: test_api.py  test_audio.py  test_backend.py  test_cli.py  test_jobs.py  test_output.py  test_pipeline.py  test_session.py  test_vad.py
tests_e2e/: README.md  conftest.py  test_smoke.py
tests_e2e/fixtures/: manifest.json
tests_e2e/fixtures/Kal/: metadata.json
tests_e2e/mock_asr/: server.py
