[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-transcriber"
version = "0.1.0"
description = "Async transcription service with VAD, RNNoise denoising, and multi-backend ASR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "faster-whisper>=1.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
livekit-transcriber = "transcriber.main:main"

[tool.setuptools.packages.find]
include = ["transcriber*"]
