[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-transcriber"
version = "0.2.2"
description = "CLI that transcribes multi-participant audio recordings via an external OpenAI-compatible ASR API"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "onnxruntime>=1.19.0",
    "numpy>=2.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
local-transcriber = "local_transcriber.cli:main"

[tool.setuptools.packages.find]
include = ["local_transcriber*"]
